--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,26 @@ name = "z2p"
 [dependencies]
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+serde = { version = "1", features = ["derive"]}
+config = "0.11"
+uuid = { version = "0.8.1", features = ["v4"] }
+chrono = "0.4.15"
+
 
 # Dev dependencies are used exclusively when running tests or examples
 # They do not get included in the final application binary!
 [dev-dependencies]
 reqwest = "0.11"
+
+# Using table-like toml syntax to avoid a super-long line!
+[dependencies.sqlx]
+version = "0.5.7"
+default-features = false
+features = [
+    "runtime-actix-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate"
+]
